--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,12 @@
-
-
-.kitty{
-	margin: auto;
-	width: 80px;
-	height: 80px;
-	background-image: url(../img/kitty0.png);
-	background-size: cover;
-	background-position: center;
-	transition: all 1200ms ease-in-out;
+header{
+	background-color: #3a3a3a;
+	border-bottom: 1px solid transparent;
+	text-align: center;
+	padding: 2px;
+	position: relative;
 }
-
-.makeBig{
-width: 100%;
-}
-
-#catMeter{
-width: 100%;
-height: 100%;
-background-size: cover;
-background-position: center;
-background-color: rgba(90, 11, 11, 0.66);
-transition: all 200ms;
+.announcement-bar__message{
+	color: #ffffff;
+	font-weight: bold;
+	padding: 11px 22px;
 }
