--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,122 @@
 header{
 	background-color: #3a3a3a;
-	border-bottom: 1px solid transparent;
 	text-align: center;
-	padding: 2px;
 	position: relative;
 }
 .announcement-bar__message{
 	color: #ffffff;
 	font-weight: bold;
-	padding: 11px 22px;
+	padding: 15px 22px;
+	margin: 0;
+}
+.bannerContainer{
+	position: relative;
+	width: 100vw;
+	height: 66.5vw;
+	background-color: white;
+	background-image: url("../img/slide1.jpg");
+	background-size: contain;
+	background-repeat: no-repeat;
+	background-position: center;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+}
+.bannerContainer2{
+	height: 45.5vw;
+	background-image: url("../img/slide4.jpg");
+}
+.bannerContainer p{
+	color: white;
+	font-weight: bold;	
+	z-index: 1;
+	width: 60%;
+	font-size: 2vw;
+}
+.bannerInner{
+	position: relative;
+	display: table-cell;
+	vertical-align: middle;
+}
+.opacity{
+	position: absolute;
+	top: 0;right: 0;bottom: 0;left: 0;
+	background-color: rgba(73, 73, 73, 0.35);
+	z-index: 0;
+}
+.bannerLargeText{
+	box-sizing: border-box;
+	width: 80vw;
+	color: rgb(239, 239, 239);
+	font-size: 6vw;
+	font-weight: bold;
+	padding: 2vw 8vw 2vw 8vw;
+	z-index: 1;
+}
+.clickHere{
+	background-color: #3a3a3a;
+	height: 50px;
+	width: 100px;
+	color: white;
+	text-align: center;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	border-radius: 18px;
+	z-index: 1;
+}
+#microDosing{
+	display: inline-flex;
+	align-items: center;
+}
+#microDosing div p{
+width: 70%;
+}
+#microDosingImg{
+	margin: 30px 20px;
+	width: 40vw;
+	height: 35vw;
+	background-image: url("../img/Microdose.jpg");
+	background-size: contain;
+	background-repeat: no-repeat;
+	background-position: center;
+}
+.testimonial{
+	width: 100vw;
+	height: auto;
+	display: inline-flex;
+	justify-content: space-around;
+}
+.testimonial div{
+	padding: 45px 10px;
+	text-align: center;
+	width: 30vw;
+	height: auto;
+	min-height: 200px;
+}
+#fourImages{
+display: inline-flex;
+justify-content: center;
+width: 100vw;
+}
+#fourImages div{
+background-repeat: no-repeat;
+background-size: cover;
+background-position: center;
+overflow: hidden;
+width: 25vw;
+height: 430px;
+}
+#fourImages1{
+background-image: url("../img/slide1.jpg");
+}
+#fourImages2{
+background-image: url("../img/slide4.jpg");
+}
+#fourImages3{
+background-image: url("../img/slide2.jpg");
+}
+#fourImages4{
+background-image: url("../img/slide3.jpg");
 }
