--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,16 @@
+/* nav{
+	position: -webkit-sticky;
+	position: sticky;
+	top: 0;
+} */
+
 header{
 	background-color: #3a3a3a;
 	text-align: center;
-	position: relative;
+	position: -webkit-sticky;
+	position: sticky;
+	top: 0;
+	z-index: 2;
 }
 .announcement-bar__message{
 	color: #ffffff;
