--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@ header{
 	position: relative;
 	width: 100vw;
 	height: 66.5vw;
+	max-height: 600px;
 	background-color: white;
 	background-image: url("../img/slide1.jpg");
 	background-size: contain;
@@ -58,7 +59,7 @@ header{
 	box-sizing: border-box;
 	width: 80vw;
 	color: rgb(239, 239, 239);
-	font-size: 6vw;
+	font-size: 5vw;
 	font-weight: bold;
 	padding: 2vw 8vw 2vw 8vw;
 	z-index: 1;
